# plugable-chat

./: .gitattributes  .gitignore  AGENTS.md  Cargo.lock.pinned  Cargo.toml  DEBUG_LAYOUT.md  MATH_SUPPORT.md  README.md  REASONING_MODEL_GUIDE.md  STREAMING_FIX.md  legacy_block.txt  package-lock.json  package.json  requirements.bat  requirements.ps1  requirements.sh
.cargo/: config.toml
.cursor/plans/: agentic_loop_state_machine_ebfccda1.plan.md  application_startup_state_machine_46cb56e0.plan.md  database_and_tool_attachments_0f4fbd75.plan.md  database_schema_refresh_status_bar_9cf74b65.plan.md  dual_embedding_models_99011ec7.plan.md  enhanced_schema_metadata_28606c53.plan.md  event_system_cleanup_4d7e9b66.plan.md  gpu_mutex_synchronization_eb5fae31.plan.md  model_sync_state_machine_1ed321d9.plan.md  models_tab_implementation_c97685d0.plan.md  native_tool_result_format_9340497b.plan.md  portable_rag_embeddings_6d1a1104.plan.md  rag_hierarchical_chunking_baeb3343.plan.md  refactor_484b8771.plan.md  settings_state_machine_refactor_57269f19.plan.md  simplify_tool_settings_9c4da861.plan.md  stdlib_imports_sync_a68f67eb.plan.md  support_gpt-oss-20b_harmony_format_ee02b670.plan.md  tabular_file_attachments_3bf75b7f.plan.md  upgrade_local_embeddings_&_gpu_889e42a1.plan.md
docs/: 2025-small-models-tool-calling.md  ces-2026.md  initial-plugable-chat-plan.md  state-machine-foundry-local-analysis.md  state-machine-prompt-alignment-plan.md  tool-decision-tree.md
docs/.rag-cache/: manifest.json
mcp-test-server/: Cargo.toml
mcp-test-server/src/: lib.rs  main.rs  server.rs
scripts/: bundle-macos.sh  bundle-windows.ps1  export_schema_cache_tsv.py  mcp-test.ps1  mcp-test.sh  postinstall.mjs  setup-kiosk.ps1  tauri-offline.mjs  transform_crimes_csv.py  windows-requirements.ps1
src/: AGENTS.md  App.tsx  index.css
src-tauri/: .taurignore  AGENTS.md  Cargo.toml  build.rs  check_output.txt  rust-toolchain.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/crates/python-sandbox/: AGENTS.md  Cargo.toml
src-tauri/crates/python-sandbox/src/: lib.rs  protocol.rs  sandbox.rs
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  agentic_loop.rs  agentic_state.rs  app_state.rs  auto_discovery.rs  cli.rs  crash_handler.rs  demo_schema.rs  lib.rs  main.rs  message_builders.rs  mid_turn_state.rs  model_profiles.rs  paths.rs  process_utils.rs  protocol.rs  python_helpers.rs  repetition_detector.rs  settings.rs  settings_state_machine.rs  state_machine.rs  system_prompt.rs  tabular_parser.rs  tool_adapters.rs  tool_capability.rs  tool_execution.rs  tool_registry.rs
src-tauri/src/actors/: AGENTS.md  database_toolbox_actor.rs  embedded_sqlite_actor.rs  foundry_actor.rs  mcp_host_actor.rs  mod.rs  python_actor.rs  rag_actor.rs  schema_vector_actor.rs  startup_actor.rs  vector_actor.rs
src-tauri/src/actors/foundry/: mod.rs  model_gateway_actor.rs  request_builder.rs  service_manager.rs  stream_handler.rs
src-tauri/src/actors/rag/: cache_manager.rs  document_chunker.rs  file_processor.rs  mod.rs  pdf_extractor.rs  retrieval_actor.rs
src-tauri/src/commands/: chat.rs  database.rs  mcp.rs  mod.rs  model.rs  rag.rs  settings.rs  startup.rs  tool.rs
src-tauri/src/tests/: agentic_integration.rs  embedded_sqlite_tests.rs  mod.rs  tabular_integration.rs  tool_capability_integration.rs
src-tauri/src/tool_parsing/: AGENTS.md  braintrust_parser.rs  common.rs  gemini_parser.rs  granite_parser.rs  harmony_parser.rs  hermes_parser.rs  json_fixer.rs  json_parser.rs  markdown_json_parser.rs  mod.rs  python_detector.rs  pythonic_parser.rs  result_formatter.rs  tagged_parser.rs
src-tauri/src/tools/: AGENTS.md  code_execution.rs  execute_sql.rs  mod.rs  schema_search.rs  sql_select.rs  tool_search.rs
src/components/: AGENTS.md  ChatArea.tsx  CodeEditor.tsx  EditorPanel.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  ToolCallApproval.tsx
src/components/chat/: ChatArea.tsx  index.ts
src/components/chat/attachments/: AttachedTablePills.tsx  AttachedToolPills.tsx  AttachmentMenu.tsx  RagFilePills.tsx  TabularFilePills.tsx  index.ts
src/components/chat/indicators/: SearchingIndicator.tsx  ThinkingIndicator.tsx  ToolExecutionIndicator.tsx  index.ts
src/components/chat/input/: InputBar.tsx
src/components/chat/messages/: AssistantMessage.tsx  UserMessage.tsx  index.ts
src/components/chat/modals/: DatabaseAttachmentModal.tsx  ToolAttachmentModal.tsx  index.ts
src/components/chat/rag/: CodeExecutionBlock.tsx  RagContextBlock.tsx  index.ts
src/components/chat/tools/: InlineToolCallResult.tsx  SqlResultTable.tsx  ToolApprovalDialog.tsx  ToolProcessingBlock.tsx  index.ts
src/components/chat/utils/: index.ts  latex-processing.ts  message-formatting.ts  tool-parsing.ts
src/components/settings/: SettingsModal.tsx  types.ts
src/components/settings/cards/: FoundryModelCard.tsx  McpServerCard.tsx
src/components/settings/common/: SettingsEnvVarInput.tsx  SettingsTagInput.tsx
src/components/settings/preview/: SchemaRefreshStatusBar.tsx  StateMachinePreview.tsx
src/components/settings/tabs/: BuiltinsTab.tsx  DatabasesTab.tsx  FilesTab.tsx  InterfacesTab.tsx  ModelsTab.tsx  SchemasTab.tsx  SystemPromptTab.tsx  ToolsTab.tsx
src/lib/: api.ts  python-allowed-imports.ts  response-parser.ts  tool-calls.ts
src/store/: AGENTS.md  chat-store.ts  settings-store.ts
src/store/chat/: constants.ts  helpers.ts  index.ts  listeners.ts  types.ts
src/store/chat/actions/: send-message.ts
src/store/chat/slices/: attachment-slice.ts  chat-history-slice.ts  editor-slice.ts  message-slice.ts  model-slice.ts  operation-status-slice.ts  rag-slice.ts  startup-slice.ts  streaming-slice.ts  tool-execution-slice.ts
test-data/: demo-tools.yaml  test_tabular.csv
