[package]
name = "mcp-test-server"
version = "0.1.0"
edition = "2021"
description = "MCP Test Server for Plugable Chat development"

[[bin]]
name = "mcp-test-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "io-std"] }
chrono = "0.4"




