[package]
name = "plugable-chat"
version = "0.0.0"
description = "A Plugable Chat Application"
authors = ["you"]
edition = "2021"

[lib]
name = "plugable_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "=0.4.38"

# LanceDB & Arrow Stack (Pinning versions as per plan)
lancedb = "0.4"
arrow = "51.0" 
arrow-array = "51.0"
arrow-schema = "51.0"
reqwest = { version = "0.12.24", features = ["json"] }

# Local embeddings via ONNX Runtime
fastembed = "4"
# ONNX Runtime with GPU support (CUDA, TensorRT, CoreML)
ort = { version = "2.0.0-rc.9", features = ["cuda", "tensorrt", "coreml"] }

# File hashing for cache invalidation
sha2 = "0.10"

# Home directory detection for config files
dirs = "5"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Regex for parsing tool calls
regex = "1"

# URL encoding for API calls
urlencoding = "2"

# Python syntax parsing (for pre-exec validation)
rustpython-parser = { version = "0.4", default-features = false }

# Lazy static for profile registry
lazy_static = "1.4"

# WASM runtime for Python sandbox
wasmtime = "22"
wasmtime-wasi = "22"

# Async channel for WASM callbacks  
async-channel = "2"

# Python sandbox for code execution
python-sandbox = { path = "crates/python-sandbox" }
mcp-test-server = { path = "../mcp-test-server" }

# PDF text extraction
pdf-extract = "0.9"

# DOCX parsing (DOCX = ZIP with XML)
zip = "0.6"

[dependencies.tauri-plugin-opener]
version = "2"

[dependencies.tauri-plugin-dialog]
version = "2"
